# wb-parse

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: constants.py  database.py  excel.py  handler.py  main.py  models.py  parser.py  telegram_bot.py  utils.py
src/celery_impl/: __init__.py  celeryconfig.py
src/celery_impl/reviews/: tasks.py
